Add image to chekhov stories post, more progress on rust lambda calculus post

--- a/posts/chekhov_stories.mdx
+++ b/posts/chekhov_stories.mdx
@@ -4,6 +4,11 @@ date: '2025-03-25'
 description: "Reflections from reading a volume of Chekhov's short stories."
 ---
 
+<figure>
+  <img src="/personal-website/chekhov_stories/courbet_after_dinner_at_ornans.jpg" alt="Gustave Courbet's _After Dinner at Ornans_"/>
+  <figcaption className="text-center">_After Dinner at Ornans_, Gustave Courbet, 1848-49 </figcaption>
+</figure>
+
 A New Year's resolution of mine was to get back into reading, and so this January I picked up a [volume of short stories by Chekhov](https://www.amazon.com/Fifty-Two-Stories-Anton-Chekhov/dp/0525520813). This was my first introduction to his writing, and I knew nothing about Chekhov prior to this book aside from the fact that he is regarded as one of the great figures of Russian literature. While I finished the collection some time ago, I wanted to write a brief reflection on it, hence this blog post (hopefully the first of many!).
 
 ## The Stories
